Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
       <div class="container">
         <h1>Cargowizard</h1>
+        <h2></h2>
 
         <section id="downloads">
           <a href="https://github.com/CargoWizard/CargoWizard/zipball/master" class="btn">Download as .zip</a>
@@ -27,22 +28,41 @@
 
     <div class="container">
       <section id="main_content">
-			<h2>Team:<h2>
-			<ul>
-				<li>Jan Roztočil (honza.roztocil@gmail.com)</li>
-				<li>Lukáš Navrátil (lukas.navr@gmail.com)</li>
-				<li>Tomáš Hladík (t.hladik@centrum.cz)</li>
-				<li>Petr Onderka (gsvick@gmail.com)</li>
-				<li>Filip Řepka (repik.x@seznam.cz)</li>
-				<li>Ondra Heřmánek (ondra.hermanek@gmail.com)</li>
-			</ul>
-			<h2>Mission</h2>
-			<div>				
-Cilem je vytvorit software, ktery bude firme zabyvajici se autodopravou resit beznou agendu. Tedy spravovat vozovy park a seznam zamestancu (ridicu), dale pak poskytovat sluzbu automatickeho dispecera, zadavat trasy jednotlivym autum a snazit se je nejak optimalizovat. Trasy bude centralni dispecink posilat primo autum do navigace. A v neposledni rade bude k dispozici rozhrani pro zadavani novych zakazek (nejspis web), to budou moct puzivat jak koncovi klienti, tak treba operatori zvedajici telefony.
-			</div>
-          <a href="https://github.com/CargoWizard/CargoWizard" class="btn btn-github"><span class="icon"></span>More on GitHub</a>
+        <h1>
+<a name="cargowizard" class="anchor" href="#cargowizard"><span class="octicon octicon-link"></span></a>CargoWizard</h1>
+
+<h1>
+<a name="team" class="anchor" href="#team"><span class="octicon octicon-link"></span></a>Team</h1>
+
+<ul>
+<li>Jan Roztočil (<a href="mailto:honza.roztocil@gmail.com">honza.roztocil@gmail.com</a>)</li>
+<li>Lukáš Navrátil (<a href="mailto:lukas.navr@gmail.com">lukas.navr@gmail.com</a>)</li>
+<li>Tomáš Hladík (<a href="mailto:t.hladik@centrum.cz">t.hladik@centrum.cz</a>)</li>
+<li>Petr Onderka (<a href="mailto:gsvick@gmail.com">gsvick@gmail.com</a>)</li>
+<li>Filip Řepka (<a href="mailto:repik.x@seznam.cz">repik.x@seznam.cz</a>)</li>
+<li>Ondra Heřmánek (<a href="mailto:ondra.hermanek@gmail.com">ondra.hermanek@gmail.com</a>)</li>
+</ul><h1>
+<a name="mission" class="anchor" href="#mission"><span class="octicon octicon-link"></span></a>Mission</h1>
+
+<p>Cílem je vytvořit software, který bude firmě zabývající se autodopravou řešit
+běžnou agendu. Bude spravovat vozový park a seznam zaměstnanců (řidičů), dále
+pak poskytovat službu automatického dispečera (resp. v jazyce logistiky -
+"disponenta"), tedy bude přidělovat trasy jednotlivým autům a snažit se
+optimalizovat jejich vytížení. Trasy bude cetrální dispečink posílat autům
+přímo do navigace. V neposlední řadě bude k dispozici webové rozhraní pro 
+zadávaní nových zakázek, které budou moct využívat jakt koncoví klienti, tak i
+operátoři přijímající zakázky po telefonu.                              </p>
+
+<h1>
+<a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h1>
+
+<ul>
+<li><a href="https://docs.google.com/document/d/1ymMX19y3kHfJ77xJQ8NDcDHS1yBCDHuWDSaOqpiZZCQ/edit">Google docs</a></li>
+<li><a href="https://github.com/CargoWizard/CargoWizard">Github - repository</a></li>
+</ul>
       </section>
     </div>
+
     
   </body>
 </html>
