uprava emailovych adres proti crawlerum

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 <a name="team" class="anchor" href="#team"><span class="octicon octicon-link"></span></a>Team</h1>
 
 <ul>
-<li>Jan Roztočil (<a href="mailto:honza.roztocil@gmail.com">honza.roztocil@gmail.com</a>)</li>
-<li>Lukáš Navrátil (<a href="mailto:lukas.navr@gmail.com">lukas.navr@gmail.com</a>)</li>
-<li>Tomáš Hladík (<a href="mailto:t.hladik@centrum.cz">t.hladik@centrum.cz</a>)</li>
-<li>Petr Onderka (<a href="mailto:gsvick@gmail.com">gsvick@gmail.com</a>)</li>
-<li>Filip Řepka (<a href="mailto:repik.x@seznam.cz">repik.x@seznam.cz</a>)</li>
-<li>Ondra Heřmánek (<a href="mailto:ondra.hermanek@gmail.com">ondra.hermanek@gmail.com</a>)</li>
+<li>Jan Roztočil (honza (dot) roztocil (at) gmail.com)</li>
+<li>Lukáš Navrátil (lukas (dot) navr (at) gmail.com)</li>
+<li>Tomáš Hladík (t (dot) hladik (at) centrum.cz)</li>
+<li>Petr Onderka (gsvick (at) gmail (dot) com)</li>
+<li>Filip Řepka (repik (dot) x (at) seznam.cz)</li>
+<li>Ondra Heřmánek (ondra (dot) hermanek (at) gmail.com)</li>
 </ul><h1>
 <a name="mission" class="anchor" href="#mission"><span class="octicon octicon-link"></span></a>Mission</h1>
 
