modified main page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <li>Filip Řepka (repik (dot) x (at) seznam.cz)</li>
 <li>Ondra Heřmánek (ondra (dot) hermanek (at) gmail.com)</li>
 </ul><h1>
-<a name="mission" class="anchor" href="#mission"><span class="octicon octicon-link"></span></a>Mission</h1>
+<a name="mission" class="anchor" href="#mission"><span class="octicon
+        octicon-link"></span></a>Deklarace záměru</h1>
 
 <p>Cílem je vytvořit software, který bude firmě zabývající se autodopravou řešit
 běžnou agendu. Bude spravovat vozový park a seznam zaměstnanců (řidičů), dále
@@ -54,10 +55,25 @@ zadávaní nových zakázek, které budou moct využívat jakt koncoví klienti,
 operátoři přijímající zakázky po telefonu.                              </p>
 
 <h1>
-<a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h1>
+<a name="vission" class="anchor" href="#vission"><span class="octicon
+        octicon-link"></span></a>Dokumenty</h1>
+
 
 <ul>
-<li><a href="https://docs.google.com/document/d/1ymMX19y3kHfJ77xJQ8NDcDHS1yBCDHuWDSaOqpiZZCQ/edit">Google docs</a></li>
+    <li><a href="CargoWizard_scheme.png">Neformální schéma systému (.png)</a></li>
+    <li><a href="CargoWizard-Vize.pdf">Vize (.pdf)</a></li>
+    <li><a href="CargoWizard-SRS-Dict-Matrix.pdf">Katalog požadavků, glosář, matice zodpovědnosti (.pdf)</a></li>
+</ul>
+
+<h1>
+<a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h1>
+
+
+<ul>
+<!--<li><a
+    href="https://docs.google.com/document/d/1ymMX19y3kHfJ77xJQ8NDcDHS1yBCDHuWDSaOqpiZZCQ/edit">Google
+    docs</a></li>-->
+
 <li><a href="https://github.com/CargoWizard/CargoWizard">Github - repository</a></li>
 </ul>
       </section>
