added architecture description page and some images

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@ operátoři přijímající zakázky po telefonu.                              <
 </ul>
 
 <h1>
+<a name="links" class="anchor" href="#description"><span class="octicon
+        octicon-link"></span></a>Popis architektury</h1>
+<p>Architektura systému CargoWizard je popsána na samostané stráce <a
+    href="architecture.html">zde</a>.</p>
+<h1>
 <a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h1>
 
 
