added budget links

--- a/index.html
+++ b/index.html
@@ -56,13 +56,21 @@ operátoři přijímající zakázky po telefonu.                              <
 
 <h1>
 <a name="vission" class="anchor" href="#vission"><span class="octicon
-        octicon-link"></span></a>Dokumenty</h1>
+        octicon-link"></span></a>Specifikace požadavků</h1>
 
 
 <ul>
-    <li><a href="CargoWizard_scheme.png">Neformální schéma systému (.png)</a></li>
+    <li><a href="images/CargoWizard_scheme.png">Neformální schéma systému (.png)</a></li>
     <li><a href="CargoWizard-Vize.pdf">Vize (.pdf)</a></li>
     <li><a href="CargoWizard-SRS-Dict-Matrix.pdf">Katalog požadavků, glosář, matice zodpovědnosti (.pdf)</a></li>
+</ul>
+
+<h1>
+<a name="links" class="anchor" href="#description"><span class="octicon
+        octicon-link"></span></a>Rozpočet</h1>
+<ul>
+    <li><a href="CostOverview.pdf">Cost overview (.pdf)</a></li>
+    <li><a href="ResourceOverview.pdf">Resource overview (.pdf)</a></li>
 </ul>
 
 <h1>
