added deployment diagram to architecture description page

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ operátoři přijímající zakázky po telefonu.                              <
 <a name="links" class="anchor" href="#description"><span class="octicon
         octicon-link"></span></a>Rozpočet</h1>
 <ul>
-    <li><a href="CostOverview.pdf">Cost overview (.pdf)</a></li>
-    <li><a href="ResourceOverview.pdf">Resource overview (.pdf)</a></li>
+    <li><a href="https://github.com/CargoWizard/CargoWizard/raw/master/pdf/CostOverview.pdf">Cost overview (.pdf)</a></li>
+    <li><a href="https://github.com/CargoWizard/CargoWizard/raw/master/pdf/ResourceOverview.pdf">Resource overview (.pdf)</a></li>
 </ul>
 
 <h1>
