--- a/architecture.html
+++ b/architecture.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -31,6 +31,13 @@
 
 <h1> <a name="cargowizard" class="anchor" href="#cargowizard">
 <span class="octicon octicon-link"></span></a>Popis architektury projektu CargoWizard</h1>
+
+<h2> <a name="team" class="anchor" href="#team">
+<span class="octicon octicon-link"></span></a>Business model</h2>
+
+<p>Základní pohled na fungování společnosti.</p>
+
+<img src="images/business_model.png"/>
 
 <h2> <a name="team" class="anchor" href="#team">
 <span class="octicon octicon-link"></span></a>Logical View</h2>
