added link to MS Project project of CargoWizard project ;)

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ operátoři přijímající zakázky po telefonu.                              <
 <ul>
     <li><a href="https://github.com/CargoWizard/CargoWizard/raw/master/pdf/CostOverview.pdf">Cost overview (.pdf)</a></li>
     <li><a href="https://github.com/CargoWizard/CargoWizard/raw/master/pdf/ResourceOverview.pdf">Resource overview (.pdf)</a></li>
+    <li><a href="https://github.com/CargoWizard/CargoWizard/raw/master/docs/CargoWizzard.mpp">CargoWizard - MS Project projekt(.mpp)</a></li>
 </ul>
 
 <h1>
