images of class diagrams inserted into architecture webpage

--- a/architecture.html
+++ b/architecture.html
@@ -99,6 +99,29 @@ programu v daném on-board zařízení. Posledním úkolem této aplikace je
 sledovat aktuální polohu vozidla a ve stanoveném intervalu ji posílat do
 systému.</p>
 
+<br/>
+<p>Následuje pohled na dekompozici systému v podobě formálních class diagramů.</p>
+
+<a href="https://raw.github.com/CargoWizard/CargoWizard/master/img/class_diagrams/Core.png">
+<img
+src="https://raw.github.com/CargoWizard/CargoWizard/master/img/class_diagrams/Core.png"/>
+</a>
+<br/>
+<br/>
+<a
+    href="https://raw.github.com/CargoWizard/CargoWizard/master/img/class_diagrams/WebInterface.png">
+<img
+src="https://raw.github.com/CargoWizard/CargoWizard/master/img/class_diagrams/WebInterface.png"/>
+</a>
+<br/>
+<br/>
+<a
+    href="https://raw.github.com/CargoWizard/CargoWizard/master/img/class_diagrams/On-boardApplication.png">
+<img
+src="https://raw.github.com/CargoWizard/CargoWizard/master/img/class_diagrams/On-boardApplication.png"/>
+</a>
+<br/>
+
 <h2> <a name="develop" class="anchor">
 <span class="octicon octicon-link"></span></a>Development View</h2>
 
