added sequence diagrams

--- a/architecture.html
+++ b/architecture.html
@@ -40,6 +40,7 @@
     <li><a href="#deploy">Deployment View</a></li>
     <li><a href="#process">Process View</a></li>
     <li><a href="#usecase">Use Case Model</a></li>
+    <li><a href="#scenarios">Scenarios</a></li>
     <li><a href="#business">Business Model</a></li>
 </ul>
 
@@ -261,6 +262,82 @@ systému.
 příjmu/předání.
 </br><b>Use cases:</b> UC1 - UC3
 </p>
+
+<h2> <a name="scenarios" class="anchor">
+<span class="octicon octicon-link"></span></a>Scenarios</h2>
+
+<h3>Change Order </h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/ChangeOrder.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/ChangeOrder.png"/></a><br/>
+</p>
+
+<h3>Change Order - Failed </h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/ChangeOrderFailed.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/ChangeOrderFailed.png"/></a><br/>
+</p>
+
+<h3>Change Order - Failed - Storno</h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/ChangeOrderFailedStorno.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/ChangeOrderFailedStorno.png"/></a><br/>
+</p>
+
+<h3>Order Operator</h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderOperator.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderOperator.png"/></a><br/>
+</p>
+
+<h3>Order Operator - Replan</h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderOperatorReplan.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderOperatorReplan.png"/></a><br/>
+</p>
+
+<h3>Order Operator - Replan - Failed - Stored</h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderOperatorReplanFailedStored.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderOperatorReplanFailedStored.png"/></a><br/>
+</p>
+
+<h3>Order Operator - Replan - Failed - Storno</h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderOperatorReplanFailedStorno.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderOperatorReplanFailedStorno.png"/></a><br/>
+</p>
+
+<h3>Order Web</h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderWeb.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderWeb.png"/></a><br/>
+</p>
+
+<h3>Order Web - Replan</h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderWebReplan.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderWebReplan.png"/></a><br/>
+</p>
+
+<h3>Order Web - Replan - Failed - Stored</h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderWebReplanFailedStored.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderWebReplanFailedStored.png"/></a><br/>
+</p>
+
+<h3>Order Web - Replan - Failed - Storno</h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderWebReplanFailedStorno.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/OrderWebReplanFailedStorno.png"/></a><br/>
+</p>
+
+<h3>Statistics</h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/Statistics.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/Statistics.png"/></a><br/>
+</p>
+
 
 <h2> <a name="business" class="anchor">
 <span class="octicon octicon-link"></span></a>Business Model</h2>
