Data model added

--- a/architecture.html
+++ b/architecture.html
@@ -41,6 +41,7 @@
     <li><a href="#process">Process View</a></li>
     <li><a href="#usecase">Use Case Model</a></li>
     <li><a href="#scenarios">Scenarios</a></li>
+	<li><a href="#datamodel">Scenarios</a></li>
     <li><a href="#business">Business Model</a></li>
 </ul>
 
@@ -344,6 +345,15 @@ příjmu/předání.
 <img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/Sequence%20Diagrams/Statistics.png"/></a><br/>
 </p>
 
+
+<h2> <a name="datamodel" class="anchor">
+<span class="octicon octicon-link"></span></a>Data model</h2>
+
+<h3>Entity model</h3>
+<p>
+<a  href="https://raw.github.com/CargoWizard/CargoWizard/master/img/DataConceptualModel.png">
+<img src="https://raw.github.com/CargoWizard/CargoWizard/master/img/DataConceptualModel.png"/></a><br/>
+</p>
 
 <h2> <a name="business" class="anchor">
 <span class="octicon octicon-link"></span></a>Business Model</h2>
