Copy paste error fixed

--- a/architecture.html
+++ b/architecture.html
@@ -41,7 +41,7 @@
     <li><a href="#process">Process View</a></li>
     <li><a href="#usecase">Use Case Model</a></li>
     <li><a href="#scenarios">Scenarios</a></li>
-	<li><a href="#datamodel">Scenarios</a></li>
+	<li><a href="#datamodel">Data model</a></li>
     <li><a href="#business">Business Model</a></li>
 </ul>
 
