added table with points

--- a/index.html
+++ b/index.html
@@ -77,8 +77,16 @@ operátoři přijímající zakázky po telefonu.                              <
 <h1>
 <a name="links" class="anchor" href="#description"><span class="octicon
         octicon-link"></span></a>Popis architektury</h1>
-<p>Architektura systému CargoWizard je popsána na samostané stráce <a
+<p>Architektura systému CargoWizard je popsána na samostatné stránce <a
     href="architecture.html">zde</a>.</p>
+
+<h1>
+<a name="links" class="anchor" href="#body"><span class="octicon octicon-link"></span></a>Bodové hodnocení týmu</h1>
+<p>
+    <a href="body.html">Zde</a> je tabulka s bodovým hodnocením členů týmu.
+</p>
+
+
 <h1>
 <a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h1>
 
