--- a/body.html
+++ b/body.html
@@ -30,7 +30,7 @@
 <section id="main_content">
 
 <h1> <a name="cargowizard" class="anchor" href="#cargowizard">
-<span class="octicon octicon-link"></span></a>Popis architektury projektu CargoWizard</h1>
+<span class="octicon octicon-link"></span></a>Bodové hodnocení týmu</h1>
 
 <table>
     <tr>
