added link to task 4 document

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@ operátoři přijímající zakázky po telefonu.                              <
     href="architecture.html">zde</a>.</p>
 
 <h1>
+<a name="links" class="anchor" href="#minicpec"><span class="octicon
+        octicon-link"></span></a>Minispecifikace komponent a rozhraní</h1>
+<p>Vše je popsáno v dokumentu <a href="task4.pdf">zde</a>.</p>
+
+<h1>
 <a name="links" class="anchor" href="#body"><span class="octicon octicon-link"></span></a>Bodové hodnocení týmu</h1>
 <p>
     <a href="body.html">Zde</a> je tabulka s bodovým hodnocením členů týmu.
