se skromnosti sobe vlastni si prideluji plny pocet bodu!

--- a/body.html
+++ b/body.html
@@ -79,10 +79,15 @@
         <td>4</td>
         <td>4</td>
     </tr>
-</table>
 
-<p align="right">-- Jan Roztočil (teamleader)</p>
-    
+    <tr align="center">
+        <th> Jan Roztočil</th>
+        <td>3</td>
+        <td>3</td>
+        <td>4</td>
+        <td>4</td>
+    </tr>
+</table>
 
 </body>
 </html>
